tests/PhiCore/compile_failure/src/core/integer/float.fail.cpp
#include <phi/core/integer.hpp>

int main()
{
    phi::integer<float> i{7};
}
